# rusty-rocket-chat

./: Cargo.toml  README.md
src/: GUI.glade~  GUI.xml  lib.rs  main.rs
src/colour/: mod.rs
src/rocket/: client.rs  decoder.rs  mod.rs  model.rs
