[package]
name = "rocket-chat-lite"
version = "0.0.1"
authors = ["Aleksey Minkin <a.minkin@devcaz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.35"

[dependencies.nom]
version = "6.1.2"

[dependencies.serde]
version = "1.0.125"

[dependencies.serde_derive]
version = "1.0.125"

[dependencies.serde_json]
version = "1.0.64"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.0"
features = ["v2_44"]